--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/daw/Downloads/ojdbc11 (1).jar"/>
+	<classpathentry kind="lib" path="/home/isra/Descargas/ojdbc11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
